; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_show_role.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_variable.c_show_role.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"none\00", align 1
@role_string = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @show_role() #0 {
  %1 = alloca i8*, align 8
  %2 = call i32 (...) @GetCurrentRoleId()
  %3 = call i32 @OidIsValid(i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %14

6:                                                ; preds = %0
  %7 = load i8*, i8** @role_string, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %11

9:                                                ; preds = %6
  %10 = load i8*, i8** @role_string, align 8
  br label %12

11:                                               ; preds = %6
  br label %12

12:                                               ; preds = %11, %9
  %13 = phi i8* [ %10, %9 ], [ getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), %11 ]
  store i8* %13, i8** %1, align 8
  br label %14

14:                                               ; preds = %12, %5
  %15 = load i8*, i8** %1, align 8
  ret i8* %15
}

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @GetCurrentRoleId(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
